# corpus-cleaner

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_8md.html  classCorpusCleaner-members.html  classCorpusCleaner.html  classGenerateDedupLSH.html  classLSHDeduplicator.html  classes.html  classfasttext_1_1FastTextEx-members.html  classfasttext_1_1FastTextEx.html  classsimdjson_1_1dom_1_1array-members.html  classsimdjson_1_1dom_1_1array.html  classsimdjson_1_1dom_1_1array_1_1iterator-members.html  classsimdjson_1_1dom_1_1array_1_1iterator.html  classsimdjson_1_1dom_1_1document-members.html  classsimdjson_1_1dom_1_1document.html  classsimdjson_1_1dom_1_1object-members.html  classsimdjson_1_1dom_1_1object.html  classsimdjson_1_1dom_1_1object_1_1iterator-members.html  classsimdjson_1_1dom_1_1parser-members.html  classsimdjson_1_1dom_1_1parser.html  classsimdjson_1_1fallback_1_1ondemand_1_1array.html  classsimdjson_1_1fallback_1_1ondemand_1_1array__iterator-members.html  classsimdjson_1_1fallback_1_1ondemand_1_1document-members.html  classsimdjson_1_1fallback_1_1ondemand_1_1document.html  classsimdjson_1_1fallback_1_1ondemand_1_1document__stream.html  classsimdjson_1_1fallback_1_1ondemand_1_1document__stream_1_1iterator.html  classsimdjson_1_1fallback_1_1ondemand_1_1object-members.html  classsimdjson_1_1fallback_1_1ondemand_1_1parser-members.html  classsimdjson_1_1fallback_1_1ondemand_1_1raw__json__string-members.html  classsimdjson_1_1fallback_1_1ondemand_1_1raw__json__string.html  classsimdjson_1_1fallback_1_1ondemand_1_1value-members.html  classsimdjson_1_1fallback_1_1ondemand_1_1value.html  classsimdjson_1_1implementation-members.html  classsimdjson_1_1implementation.html  classsimdjson_1_1internal_1_1atomic__ptr-members.html  classsimdjson_1_1internal_1_1atomic__ptr.html  classsimdjson_1_1internal_1_1available__implementation__list-members.html  (+100 more)
corpus_cleaner/: CMakeLists.txt  corpus_cleaner.cpp  corpus_cleaner.hpp  language_filter.cpp  language_filter.hpp  main  main.cpp  minhash.cpp  minhash.hpp  normalizer.cpp  normalizer.hpp  perplexity_filter.cc  perplexity_filter.hh  temp.cpp  temp2  util.cpp  util.hpp
corpus_cleaner_cpp/: corpus_cleaner.cpp  corpus_cleaner.hpp  excess_filter.cpp  language_filter.cpp  language_filter.hpp  main.cpp  minhash.cpp  minhash.hpp  normalizer.cpp  normalizer.hpp  util.cpp  util.hpp
docs/: specification.md
examples/: cc100_cleaning.sh  oscar2019_cleaning.sh  wikipedia_cleaning.sh
html/: annotated.html  classKenLMFilter-members.html  classsimdjson_1_1dom_1_1document__stream_1_1iterator.html  classsimdjson_1_1dom_1_1element.html  classsimdjson_1_1dom_1_1key__value__pair.html  classsimdjson_1_1fallback_1_1ondemand_1_1array__iterator.html  classsimdjson_1_1fallback_1_1ondemand_1_1document__reference.html  classsimdjson_1_1fallback_1_1ondemand_1_1field.html  classsimdjson_1_1fallback_1_1ondemand_1_1parser.html  classsimdjson_1_1internal_1_1base__formatter-members.html  classsimdjson_1_1internal_1_1base__formatter.html  classsimdjson_1_1internal_1_1pretty__formatter.html  classsimdjson_1_1internal_1_1string__builder-members.html  classsimdjson_1_1internal_1_1string__builder.html  classsimdjson_1_1internal_1_1tape__ref-members.html  classsimdjson_1_1internal_1_1unsupported__implementation-members.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func_c.html  functions_func_i.html  functions_func_k.html  functions_func_n.html  functions_func_o.html  functions_func_t.html  functions_func_v.html  functions_i.html  functions_j.html  functions_q.html  functions_r.html  functions_vars.html  functions_z.html  functions_~.html  globals.html  group__object.html  index.hhc  index.hhk  index.html  md__2home_2corpus-cleaner_2docs_2specification.html  (+30 more)
latex/: classCorpusCleaner.tex  classKenLMFilter.tex  classLSHDeduplicator.tex  classfasttext_1_1FastTextEx.tex  classsimdjson_1_1dom_1_1array.tex  classsimdjson_1_1dom_1_1document.tex  classsimdjson_1_1dom_1_1document__stream_1_1iterator.tex  classsimdjson_1_1dom_1_1element.tex  classsimdjson_1_1dom_1_1key__value__pair.tex  classsimdjson_1_1dom_1_1object_1_1iterator.tex  classsimdjson_1_1fallback_1_1dom__parser__implementation.tex  classsimdjson_1_1fallback_1_1ondemand_1_1document__reference.tex  classsimdjson_1_1fallback_1_1ondemand_1_1object__iterator.tex  classsimdjson_1_1fallback_1_1ondemand_1_1parser.tex  classsimdjson_1_1fallback_1_1ondemand_1_1raw__json__string.tex  classsimdjson_1_1fallback_1_1ondemand_1_1value.tex  classsimdjson_1_1implementation.eps  classsimdjson_1_1internal_1_1atomic__ptr.tex  classsimdjson_1_1internal_1_1base__formatter.tex  classsimdjson_1_1internal_1_1dom__parser__implementation.tex  classsimdjson_1_1internal_1_1pretty__formatter.eps  classsimdjson_1_1internal_1_1pretty__formatter.tex  classsimdjson_1_1internal_1_1string__builder.tex  examples.tex  (+57 more)
tests/: AllTests.cpp  CMakeLists.txt  CorpusCleaner_test.cpp  Makefile  minus_test.cpp  plus_test.cpp  sample.cpp  sample.hpp  sample_test.cpp
tests/data/answer/: test_EmojiRemover.txt  test_ExcessFilter.txt  test_SentenceSegmentater.txt  test_SpecialCharacterRemover.txt  test_URLRemover.txt
tests/data/answer/minhash/: test_SentenceDeduplication.jsonl  test_SentenceDeduplication2.jsonl  test_SentenceDeduplication3.jsonl
tests/data/answer/null_remover/: test_null_remover.jsonl
tests/data/answer/sentence_deduplicate/: test_SentenceDeduplication.jsonl  test_SentenceDeduplication2.jsonl  test_SentenceDeduplication3.jsonl
tests/data/answer/sentence_segment/: test_SentenceSegmentater.jsonl  test_SentenceSegmentater2.jsonl
tests/data/input/: config.json  config2.json  test_EmojiRemover.txt  test_ExcessFilter.txt  test_SentenceSegmentater.txt  test_SpecialCharacterRemover.txt  test_URLRemover.txt
tests/data/input/null_remover/: test_null_remover.txt
tests/data/input/sentence_deduplicate/: test_SentenceDeduplication.txt  test_SentenceDeduplication2.txt  test_SentenceDeduplication3.txt
tests/data/input/sentence_segment/: test_SentenceSegmentater.txt  test_SentenceSegmentater2.txt
(+277 files in other folders)
